--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-# Created by .ignore support plugin (hsz.mobi)
+.ipynb_checkpoints/
+.python-version
+__pycache__/
+.env
+.DS_Store
+.idea/*
+ws*.ipynb
+
