--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ torch = "==1.7.0"
 seqeval = "==1.2.2"
 comet-ml = "==3.2.7"
 python-dotenv = "==0.15.0"
+jupyter = "==1.0.0"
 
 [requires]
 python_version = "3.8"
